--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ version.txt
 .DS_Store
 euroscope_sector_providers.txt
 SectorFileProviderDescriptor.txt
+Canada/.DS_Store
+Canada/CYHZ/.DS_Store
+China Mainland/.DS_Store
+China Mainland/Training/.DS_Store
+China Mainland/Training/ZYSH/.DS_Store
+China Mainland/Training/ZYSH/ZYTX/.DS_Store
+China Mainland/Training/ZYSH/ZYTX/TWR/.DS_Store
